# opengl-notes

./: CMakeLists.txt
include/glad/: glad.h
src/: fragmentshader.glsl  glad.c  main.cpp  vertexshader.glsl
src/OpenGL/: ElementBuffer.cpp  ElementBuffer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/resources/: fragmentshader.frag  vertexshader.vert
